anke-to/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anke-to-client
  labels:
    app: anke-to-client

spec:
  selector:
    matchLabels:
      app: anke-to-client
  template:
    metadata:
      labels:
        app: anke-to-client
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - las211.tokyotech.org

      containers:
        - name: anke-to-client
          image: ghcr.io/traptitech/anke-to-ui:v3.0.19
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: "10m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
