anke-to/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anke-to
  labels:
    app: anke-to

spec:
  replicas: 0
  selector:
    matchLabels:
      app: anke-to
  template:
    metadata:
      labels:
        app: anke-to
    spec:
      nodeSelector:
        kubernetes.io/hostname: las211.tokyotech.org
      containers:
        - name: anke-to
          image: ghcr.io/traptitech/anke-to:latest@sha256:699a6d29a29e2e384db3605b850e27c6588864d898219b51faef06ef9bb4be2f
          ports:
            - containerPort: 1323
