anke-to/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anke-to-server
  labels:
    app: anke-to-server

spec:
  selector:
    matchLabels:
      app: anke-to-server
  template:
    metadata:
      labels:
        app: anke-to-server
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - las211.tokyotech.org

      containers:
        - name: anke-to-server
          image: ghcr.io/traptitech/anke-to:3.2.2
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: "10m"
              memory: "48Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
