anke-to/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anke-to

spec:
  type: ClusterIP
  selector:
    app: anke-to
  ports:
    - name: anke-to
      port: # TODO KIKU
      targetPort: 1323
